Opened 5 years ago

Closed 5 years ago

#7867 closed defect (fixed)

DecklinkAPI 11.1 - Build error with media-autobuild_suite

Reported by: Florian Owned by: Marton Balint
Priority: normal Component: avdevice
Version: git-master Keywords: decklink
Cc: Marton Balint Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

After the update of the DeckLink headers to 11.1 the building process errored out with the following:

Likely error:
D:/AB-Suite/local64/include/DeckLinkAPI.h:5841:39: note:   no known conversion for argument 4 from '_BMDVideoOutputFlags' to 'BMDSupportedVideoModeFlags' {aka '_BMDSupportedVideoModeFlags'}
D:/AB-Suite/build/ffmpeg-git/libavdevice/decklink_common.cpp:287:69: error: no matching function for call to 'IDeckLinkOutput::DoesSupportVideoMode(_BMDVideoConnection, BMDDisplayMode&, BMDPixelFormat&, _BMDVideoOutputFlags, BMDDisplayMode*, BOOL*)'
                                                &actualMode, &support) != S_OK || !support || ctx->bmd_mode != actualMode) {
                                                                     ^
In file included from D:/AB-Suite/build/ffmpeg-git/libavdevice/decklink_common.cpp:28:
D:/AB-Suite/local64/include/DeckLinkAPI.h:5841:39: note: candidate: 'virtual HRESULT IDeckLinkOutput::DoesSupportVideoMode(BMDVideoConnection, BMDDisplayMode, BMDPixelFormat, BMDSupportedVideoModeFlags, BMDDisplayMode*, BOOL*)'
     virtual HRESULT STDMETHODCALLTYPE DoesSupportVideoMode(
                                       ^~~~~~~~~~~~~~~~~~~~
D:/AB-Suite/local64/include/DeckLinkAPI.h:5841:39: note:   no known conversion for argument 4 from '_BMDVideoOutputFlags' to 'BMDSupportedVideoModeFlags' {aka '_BMDSupportedVideoModeFlags'}
make: *** [/build/ffmpeg-git/ffbuild/common.mak:63: libavdevice/decklink_common.o] Error 1

More info can be found in the logs: [logs.zip] (https://0x0.st/zbPq.zip) - I have attached the logs.zip here also.
See the discussion on GitHub here: https://github.com/jb-alvarado/media-autobuild_suite/issues/1177

Attachments (2)

logs.zip (158.6 KB ) - added by Florian 5 years ago.
0001-avdevice-decklink-fix-checking-video-mode-in-SDK-ver.patch (3.4 KB ) - added by Marton Balint 5 years ago.

Download all attachments as: .zip

Change History (5)

by Florian, 5 years ago

Attachment: logs.zip added

comment:1 by Marton Balint, 5 years ago

Cc: Marton Balint added
Owner: set to Marton Balint
Status: newopen

Can you try the attached patch?

comment:2 by laurfb, 5 years ago

Hi.
Works for me with this patch.
Regards,
Laur

comment:3 by Carl Eugen Hoyos, 5 years ago

Component: undeterminedavdevice
Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.